--- a/.github/workflows/nfs-automation.yml
+++ b/.github/workflows/nfs-automation.yml
@@ -5,7 +5,8 @@ on:
     types: [opened]
 
 jobs:
-  build:
+  handle_new_issue:
+    runs_on: ubuntu-latest
     steps:
       - name: Handle new issue
         id: new-issue
