--- a/.github/workflows/nfs-automation.yml
+++ b/.github/workflows/nfs-automation.yml
@@ -8,7 +8,7 @@ jobs:
   handle_new_issue:
     runs-on: ubuntu-latest
     container:
-      image: Dockerfile
+      image: ./actions/nfs-automation/Dockerfile
     steps:
       - name: Checkout
         uses: actions/checkout@v1
